--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
 #home {
   height: 100vh;
   min-height: 500px;
-  background: url(img/2.jpg) no-repeat center;
+  background: url(img/2.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
