--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@
   margin-right: 30px;
 }
 
+.navbar i {
+  transition: 0.2s linear;
+}
+
 .navbar .fa-bars {
   display: none;
 }
@@ -53,7 +57,8 @@
   transition: 0.2s linear;
 }
 
-.navbar_menu a:hover {
+.navbar_menu a:hover,
+.navbar i:hover {
   color: #48dbfb !important;
 }
 
@@ -71,7 +76,7 @@
 #home {
   height: 100vh;
   min-height: 500px;
-  background: url(img/2.jpg);
+  background: url(img/2.jpg) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -273,6 +278,60 @@ section {
   width: 70%;
 }
 
+#Abilitys {
+  background-color: #353b48;
+}
+
+#Abilitys .section_title {
+  color: #f1f1f1;
+}
+
+#Abilitys .section_title::before {
+  background-color: #f1f1f1;
+}
+
+#Abilitys .section_title::after {
+  border: 4px solid #353b48;
+}
+
+.Abilitys {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.Ability {
+  width: 33%;
+  text-align: center;
+  border: 1px solid #48dbfb;
+  border-radius: 6px;
+  margin: 20px 0;
+  padding: 40px 20px;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.3s linear;
+}
+
+.Ability .icon {
+  color: #48dbfb;
+  font-size: 40px;
+  margin-bottom: 20px;
+  transition: 0.3s linear;
+}
+
+.Ability h4 {
+  font-size: 16px;
+  margin-bottom: 6px;
+}
+
+.Ability:hover {
+  background-color: #48dbfb;
+}
+
+.Ability:hover .icon {
+  color: #fff;
+}
+
 @media screen and (max-width: 980px) {
   .navbar .fas {
     display: block;
@@ -321,6 +380,10 @@ section {
     flex: 100%;
     text-align: center;
   }
+
+  .Ability {
+    width: calc(50% -20px);
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -329,6 +392,10 @@ section {
   }
 
   .skill {
+    width: 100%;
+  }
+
+  .Ability {
     width: 100%;
   }
 }
