--- a/style.css
+++ b/style.css
@@ -6,6 +6,19 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #353b48;
+}
+
 .navbar {
   position: fixed;
   display: flex;
@@ -79,8 +92,6 @@
   background: url(img/2bg.jpg) no-repeat center;
   background-size: cover;
   background-attachment: fixed;
-  z-index: -1;
-  animation: fadeIn 0.5s linear;
 }
 
 #home .inner_width {
@@ -380,7 +391,137 @@ section {
   color: #444;
 }
 
+#contact {
+  background-color: #353b48;
+}
+
+#contact .section_title {
+  color: #f1f1f1;
+}
+
+#contact .section_title::before {
+  background-color: #f1f1f1;
+}
+
+#contact .section_title::after {
+  border: 4px solid #353b48;
+}
+
+.contact_info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 60px;
+}
+
+.contact_info .item {
+  width: calc(33% - 20px);
+  height: 160px;
+  background-color: #fff;
+  color: #353b48;
+  text-align: center;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.3s linear;
+}
+
+.contact_info i {
+  display: block;
+  font-size: 40px;
+  line-height: 120px;
+  height: 100px;
+}
+
+.contact_info .item:hover {
+  background-color: #48dbfb;
+}
+
+.contact_form {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact_form input,
+.contact_form textarea {
+  width: 100%;
+  height: 50px;
+  margin: 10px 0;
+  background-color: #ff;
+  border: none;
+  outline: none;
+  padding: 20px;
+  border-radius: 4px;
+  color: #353b48;
+}
+
+.name,
+.email {
+  max-width: calc(50% - 10px);
+}
+
+.message {
+  min-height: 200px;
+  resize: vertical;
+}
+
+.contact_form .btn {
+  width: 180px;
+  background-color: transparent;
+  color: #48dbfb;
+  font-size: 16px;
+  border: 2px solid #48dbfb;
+  padding: 0;
+  margin-left: auto;
+  cursor: pointer;
+  transition: 0.3s linear;
+}
+
+.contact_form .btn:hover {
+  background-color: #48dbfb;
+  color: #fff;
+}
+
+footer {
+  background: url(/img/2bg.jpg) no-repeat center;
+  color: #fff;
+  padding: 80px 0;
+  text-align: center;
+}
+
+.copyright {
+  margin-bottom: 20px;
+  font-size: 15px;
+}
+
+.copyright a {
+  font-size: 16px;
+  color: #48dbfb;
+  font-weight: 500;
+}
+
+.goTop {
+  position: fixed;
+  z-index: 999;
+  bottom: 40px;
+  right: 40px;
+  width: 40px;
+  height: 40px;
+  background-color: #48dbfb;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+}
+
 @media screen and (max-width: 980px) {
+  #home {
+    background: url(img/2bg.jpg) no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+
   .navbar .fas {
     display: block;
     color: white;
@@ -437,6 +578,11 @@ section {
     width: calc(100% - 20px);
     margin-left: auto;
   }
+
+  .contact_info .item {
+    width: 100%;
+    margin: 10px 0;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -450,5 +596,10 @@ section {
 
   .Ability {
     width: 100%;
+  }
+
+  .name,
+  .email {
+    max-width: 100%;
   }
 }
